# ecole-polytechnique

./: .gitignore  .gitmodules  0-mo.tikz  0-pp.tikz  0-sphere.tikz  1-to.tikz  2-ball.tikz  2-to.tikz  CV_ENG_Prof_Latex.tex  I12d.eps  IV12.eps  LICENSE  README.md  Solution.java  awesome-cv.cls  main.tex  mobius.eps  problem3.py  problem4.py  problem5.py  problem6.py  q_learning.py  q_learning2.py  rapport.tex  sarsa.py
INF421/: result.txt  teste.txt
INF421/matlab/: randProt.m  task6.m
INF421/report/: main.tex
INF421/src/: BLAST.java  Blosum50.java  LCS.java  OptmalAlignment.java  TaggedString.java
INF441/: README.md
INF441/TD1/: td1.ml
INF441/TD2/: Binary.ml  Binary.mli  BinomialHeap.mli  Makefile
INF441/TD4/: cs.ml  digraph.ml  graph_test.ml  paths.ml  paths_test.ml  print.ml  spanning_tree.ml  td4.ml  traverse.ml
INF441/TD5/: syntax.ml
INF441/TD6/: solution.ml
INF442/PALE/: BusCornella.txt  BusHK.txt  MatriceE.txt  MatriceG.txt  TotalVariation-a-completer.cpp  busline-a  busline.cpp  busline.hpp  det-main-1  det-main-1.cpp  det-main-3  det-main-3.cpp  det-sparse.cpp  det-sparse.hpp  subfact.cpp
INF442/PROJECT/src/: main.cpp
INF442/TD1/: CMakeLists.txt
INF442/TD1/src/: echangeParPointeurs.cpp  hello.cpp  multiplication.cpp  transposition.cpp
INF442/TD2/src/: Atom.cpp  QuadTree.cpp  QuadTree.hpp  testComplex1.cpp  testComplex2.cpp  testComplex3.cpp  testQuadTree1.cpp  testQuadTree2.cpp
INF442/TD3/: Makefile  mathtools.hpp  partition.hpp
INF442/TD4/: Molecule.cpp  MonteCarloDistrib.cpp  PremierMPI  mpi_helloNBsend  testExercice4
INF442/TD8/code/: Isomorphism.cpp  broadcast.cpp  computeNeighbors.hpp  testNeighbors.cpp
INF552/: CMakeLists.txt  README.md
INF552/include/: homography_model.h  line_model.h  model.h
INF554/Lab 1 - The Machine Learning Pipeline/Code/: main.py  tools.py
INF556/report/: 0-kl.tikz  0-to.tikz  1-ball.tikz  1-kl.tikz  1-pp.tikz  1-sphere.tikz  2-kl.tikz  2-mo.tikz  2-pp.tikz  3-ball.tikz  klein.eps  main.tex
INF581/: README.md  cliff_walking_1.xml  q_learning.py  sarsa2.py
Lab 1 - The Machine Learning Pipeline/Code_Solution/: README.txt  main.py  main_bonus.py
Lab 2 - Supervised Classification/Code/LogisticRegression/: computeCost.py  main.py
Lab 2 - Supervised Classification/Code/kNN/: kNN.py
Languages/cours2/: Cours2.odt  proverbe.tex
Languages/cours3/: .~lock.cours3.odt#  cours3.odt  cours3.tex
Languages/dm_ang/: dm_ang.tex
MAP411/: .gitignore  problem1.py  problem2.py  problem5.py  problem6.py
MAP411/report/src/: I11.eps  I120045.eps  I123b.eps  IV22.eps
MAP583/: .gitignore
MAP583/code/: One_class_SVM_Enoch.ipynb  Other methods.ipynb  creditcard_enoch_svdd_hyperopt-downsample.ipynb  creditcard_enoch_svdd_hyperopt.ipynb  creditcard_viz.ipynb  model_1.m  test_SVDD.ipynb
PALE/: MatriceA.txt  MatriceB.txt  MatriceD.txt  MatriceF.txt  busline-a.cpp  busline-b.cpp  busline-intro.cpp  sortie-HK-b.txt  subfact  subfact.cpp
PSC/desktop/: README.md
PSC/desktop/guide/: placeholder.txt
TD1/: .project  .projectSettings  CMakeLists.txt  Makefile  td1.ml  td1.native
TD1/_build/: _digests  td1.annot  td1.cmi  td1.cmo  td1.cmx  td1.ml.depends  td1.native
TD1/src/: echangeParReferences.cpp  multiplication.cpp  palindromes.cpp
TD2/: .project  .projectSettings  BinomialHeap.ml  BinomialTree.ml  BinomialTree.mli  CMakeLists.txt  Graph.ml  PriorityQueue.ml  PriorityQueue.mli
TD2/_build/: _digests  td2.cmx  td2.ml  td2.ml.depends  td2.native
TD2/src/: Atom.hpp  Complex.cpp  Complex.hpp  Rectangle.cpp  Rectangle.hpp  testComplex0.cpp
TD3/: JL_kmeans.cpp  k_means  mathtools.cpp  partition.cpp  randomsample.cpp  randomsample.hpp  test_Exercise1.cpp  test_Exercise2.cpp
TD4/: Makefile  Molecule.cpp~  MonteCarloDistrib.cpp  MonteCarloSequentiel.cpp  MonteCarloSequentiel.cpp~  PremierMPI  PremierMPI.cpp  PremierMPI.cpp~  exo1  exo1~  graph.ml  mpi_helloBsend  mpi_helloNBsend  pi442  pi442.cpp  pi442.cpp~  sallesmachines.txt  spanning_tree_test.ml  testExercice3  testExercice4  traverse_test.ml  uf.ml
TD5/: print_tree.ml  syntax.ml
TD7/: incr.ml
TD8/code/: computeNeighbors.cpp  graph.hpp
boat/: .gitmodules
catkin_ws/: placeholder.txt
catkin_ws/src/boat_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/boat_components/: CMakeLists.txt  package.xml
catkin_ws/src/boat_components/launch/: test_all.launch  test_xbee.launch
catkin_ws/src/boat_components/local_lib/src/: init_param.cpp
catkin_ws/src/boat_components/src/camera/: camera.cpp
catkin_ws/src/boat_components/src/gps/: gps.cpp
catkin_ws/src/boat_components/src/xbee/: basic.cpp  boat_data_container.cpp  boat_data_container.h  xbee_receive.cpp  xbee_send.cpp
catkin_ws/src/btmx/: CMakeLists.txt  package.xml
catkin_ws/src/btmx/include/btmx/: init_param.h
catkin_ws/src/btmx/msg/: TeleCommands.msg
catkin_ws/src/btmx/src/: init_param.cpp
catkin_ws_3rdparty/src/: placeholder.txt
code/: One_class_SVM_Enoch.ipynb  creditcard_enoch.ipynb  creditcard_enoch_svdd.ipynb  creditcard_enoch_svdd_hyperopt.ipynb  creditcard_viz.ipynb  isolation_forest_Enoch.ipynb  other_methods_Enoch.ipynb  test_SVDD.ipynb
cours1/: cours1.tex  template.tex
cours2/: .~lock.Cours2.odt#  Cours2.odt  document.tex  emprisonnement.tex  proverbe.tex
cours3/: cours3.tex
cours4/: cours4.tex
cours5/: .~lock.cours5.odt#  cours5.odt  cours5.tex
dependencies/: placeholder.txt
include/: homography_model.h  ransac.h  ransac2.h
interface/: interfacepsc.cpp  interfacepsc.ui
matlab/: readLine.m  task4.m  task5.m
merged/: .gitignore  merged.odt
merged/dependencies/: README
merged/interface/: InterfacePSC.pro  main.cpp
report/: 0-ball.tikz  1-mo.tikz  2-sphere.tikz  III23.eps  torus.eps
report/src/: I12002.eps  I1201.eps  I123a.eps  I124.eps  I22.eps  I23.eps
scripts/: xbee_tcpip.bash
speedtyper/: README
speedtyper/src/: Main.java
src/: AhoCorasick.java  LocalAlignment.java  Main.java  SearchResult.java  Solution.java  homography_model.cpp  main-line_ransac.cpp  main-panorama.cpp
tools/scripts/: xbee_tcpip.bash
(+22 files in other folders)
