cmake_minimum_required(VERSION 2.8.3)
project(TD1)

add_executable(hello src/hello.cpp)
add_executable(palindromes src/palindromes.cpp)
add_executable(echangeParReferences src/echangeParReferences.cpp)
add_executable(echangeParPointeur src/echangeParPointeur.cpp)
add_executable(transposition src/transposition.cpp)