cmake_minimum_required(VERSION 2.8.3)
project(TD1)

add_executable(hello src/hello.cpp)
add_executable(palindromes src/palindromes.cpp)
add_executable(echangeParReferences src/echangeParReferences.cpp)
add_executable(echangeParPointeurs src/echangeParPointeurs.cpp)
add_executable(transposition src/transposition.cpp)
add_executable(multiplication src/multiplication)